# whisper.cpp

examples/: CMakeLists.txt  vad-segmenter-generator.cpp  vad-segmenter-generator.h
examples/server/: CMakeLists.txt  server.cpp
examples/whisper-streaming/: CMakeLists.txt  test-streaming.cpp  whisper-streaming-decoder.cpp  whisper-streaming-decoder.h
include/: whisper.h
src/: whisper.cpp
tests/: CMakeLists.txt  test-generator.cpp  vad-segmenter-generator-test.cpp
